criada o script inical

--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+
+
+ <link rel="icon" type="image" href="images/logo.png">
+    <title>FutureConnect - Plataforma de Talentos</title>
+    <!-- Carrega Tailwind CSS para a base de utilities -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Configuração da fonte Inter e cores personalizadas do Tailwind -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                    },
+                    colors: {
+                        'primary-blue': '#1D4ED8', // blue-700
+                        'secondary-gray': '#4B5563', // gray-600
+                        'accent-teal': '#14B8A6', // teal-500
+                    }
+                }
+            }
+        }
+    </script>
+
     
 </body>
 </html>
